PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jan 2012, PHP 5.4.0 RC 7
- Core:
  . Fix bug #60895 (Possible invalid handler usage in windows random
    functions). (Pierre)

- OpenSSL:
  . Fix possible attack in SSL sockets with SSL 3.0 / TLS 1.0.
    CVE-2011-3389. (Scott)

19 Jan 2012, PHP 5.4.0 RC6

- Core:
  . Restoring $_SERVER['REQUEST_TIME'] as a long and introducing
    $_SERVER['REQUEST_TIME_FLOAT'] to include microsecond precision. (Patrick)
  . Fixed bug #60809 (TRAITS - PHPDoc Comment Style Bug). (Dmitry)
  . Fixed bug #60768 (Output buffer not discarded) (Mike)
  . Fixed bug #60825 (Segfault when running symfony 2 tests).
    (Dmitry, Laruence)

- Hash
  . Fixed bug #60221 (Tiger hash output byte order) (Mike)
  . Removed Salsa10/Salsa20, which are actually stream ciphers (Mike)
    
- Pdo Firebird:
  . Fixed bug #47415 (segfaults when passing lowercased column name to 
    bindColumn). (Mariuz)
  . Fixed bug #53280 (segfaults if query column count less than param count). 
    (Mariuz)

- SNMP:
  . Fixed bug #60585 (php build fails with USE flag snmp when IPv6 support
    is disabled). (Boris Lytochkin)
  . Fixed bug #60749 (SNMP module should not strip non-standard SNMP port
    from hostname). (Boris Lytochkin)

07 Jan 2012, PHP 5.4.0 RC5
- Core:
  . Fixed bug #60613 (Segmentation fault with $cls->{expr}() syntax). (Dmitry)
  . Fixed bug #60611 (Segmentation fault with Cls::{expr}() syntax). (Laruence)
  . Fixed bug #55871 (Interruption in substr_replace()). (Stas)
  . Fixed bug #60627 (httpd.worker segfault on startup with php_value).
    (Laruence)

- SAPI:
  . Fixed bug #55500 (Corrupted $_FILES indices lead to security concern).
    (Stas)
  . Fixed bug #54374 (Insufficient validating of upload name leading to 
    corrupted $_FILES indices). (Stas, lekensteyn at gmail dot com)

- CLI SAPI: