@@ -8,6 +8,10 @@ PHP                                                                        NEWS
 - OpenSSL:
   . Fix possible attack in SSL sockets with SSL 3.0 / TLS 1.0.
     CVE-2011-3389. (Scott)
+    
+- Session:
+  . Fixed bug #60860 (session.save_handler=user without defined function core
+    dumps). (Felipe)
 
 19 Jan 2012, PHP 5.4.0 RC6
 
